--- a/src/VocabTrack/VocabTrack.Cli/VocabTrack.Cli.csproj
+++ b/src/VocabTrack/VocabTrack.Cli/VocabTrack.Cli.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sharprompt" Version="2.4.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VocabTrack.Core\VocabTrack.Core.csproj" />
   </ItemGroup>
 
